# python_CICD_test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my_package/: __init__.py  core.py
tests/: test_core.py
